# blts

./: .bazelrc  .gitignore  1000concurrent.sh  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README  README.md  TODO  am.sh  collectd.conf  demo.R  docker-compose.yml  go.mod  go.sum  grafana.sh  load-nice.sh  load.sh  plan  prom.sh  replace.sh  server.R  servers.sh  slides.org  slides.tex  zipkin.sh
.github/workflows/: ci.yml
c/: c.go
cmd/demo/: BUILD.bazel  demo.go  image.go  open.go
cmd/lb/: BUILD.bazel  lb.go
cmd/s/: BUILD.bazel  s.go  s_test.go
graf/: BUILD.bazel  grafana.ini
graf/data/: grafana.db
graf/prov/dashboards/: slo-demo.json  slo-demo.yaml
graf/prov/datasources/: prom.yaml
graf/provisioning/dashboards/: slo-demo.json  slo-demo.yaml
graf/provisioning/datasources/: prom.yaml
lb/: lb.go
prom/: BUILD.bazel  alertmanager.conf  alertmanager.yml  basic.rules  errors.rules  latency.rules  lb.rules  prometheus.yml  s.rules  slo.rules.yml  task.rules
s/: s.go
slides/: speed.html
