module(name = "blts")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_oci", version = "2.2.7")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
# Like golangci-lint, but integrated into the build.
go_sdk.nogo(nogo = "//:nogo")

# Update dependencies with
# `bazel run //:gazelle`.
# and then
# `bazel run @rules_go//go -- mod tidy`
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_google_go_containerregistry",
    "com_github_openzipkin_zipkin_go",
    "com_github_prometheus_client_golang",
    "com_github_testcontainers_testcontainers_go",
    "com_github_tsenart_vegeta",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_prometheus",
    "io_opencensus_go_contrib_exporter_zipkin",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:5cabf0b730eaa05d5fc8e3618fa764fdc5bf67493b487d65fe98c1837a3ed421",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")
oci.pull(
    name = "prometheus",
    digest = "sha256:4a61322ac1103a0e3aea2a61ef1718422a48fa046441f299d71e660a3bc71ae9",
    image = "docker.io/prom/prometheus",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "prometheus", "prometheus_linux_amd64", "prometheus_linux_arm64")
oci.pull(
    name = "grafana",
    digest = "sha256:b0ae311af06228bcfd4a620504b653db80f5b91e94dc3dc2a5b7dab202bcde20",
    image = "docker.io/grafana/grafana",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "grafana", "grafana_linux_amd64", "grafana_linux_arm64")
