module(name = "blts")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_oci", version = "2.3.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
# Like golangci-lint, but integrated into the build.
go_sdk.nogo(nogo = "//:nogo")

# Update dependencies with
# `bazel run //:gazelle`.
# and then
# `bazel run @rules_go//go -- mod tidy`
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_containerregistry",
    "com_github_moby_moby_client",
    "com_github_openzipkin_zipkin_go",
    "com_github_prometheus_client_golang",
    "com_github_testcontainers_testcontainers_go",
    "com_github_tsenart_vegeta",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_prometheus",
    "io_opencensus_go_contrib_exporter_zipkin",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:c83f022002fc917a92501a8c30c605efdad3010157ba2c8998a2cbf213299201",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

oci.pull(
    name = "prometheus",
    digest = "sha256:5550dc63da361dc30f6fe02ac0e4dfc736ededfef3c8d12a634db04a67824d78",
    image = "docker.io/prom/prometheus",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "prometheus", "prometheus_linux_amd64", "prometheus_linux_arm64")

oci.pull(
    name = "grafana",
    digest = "sha256:0f86bada30d65ef9d0183b90c1e2682ac92d53d95da8bed322b984ea78a4a73a",
    image = "docker.io/grafana/grafana",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "grafana", "grafana_linux_amd64", "grafana_linux_arm64")
