module(name = "blts")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_go", version = "0.62.0")
bazel_dep(name = "rules_oci", version = "2.3.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
# Like golangci-lint, but integrated into the build.
go_sdk.nogo(nogo = "//:nogo")

# Update dependencies with
# `bazel run //:gazelle`.
# and then
# `bazel run @rules_go//go -- mod tidy`
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_containerregistry",
    "com_github_moby_moby_client",
    "com_github_openzipkin_zipkin_go",
    "com_github_prometheus_client_golang",
    "com_github_testcontainers_testcontainers_go",
    "com_github_tsenart_vegeta",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_prometheus",
    "io_opencensus_go_contrib_exporter_zipkin",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:f4a335ca209e1d2ee873102c17c389ad0142e3d5b21aee2817e9cc9c01d87d20",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

oci.pull(
    name = "prometheus",
    digest = "sha256:3c42b892cf723fa54d2f262c37a0e1f80aa8c8ddb1da7b9b0df9455a35a7f893",
    image = "docker.io/prom/prometheus",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "prometheus", "prometheus_linux_amd64", "prometheus_linux_arm64")

oci.pull(
    name = "grafana",
    digest = "sha256:1c1bd67c54c5fcf6e759897852b5a584191bd6796e8d328a5ace457799801261",
    image = "docker.io/grafana/grafana",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "grafana", "grafana_linux_amd64", "grafana_linux_arm64")
