load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = [
        "demo.go",
        "open.go",
    ],
    data = [
        "//cmd/lb:image",
        "//cmd/s:image",
        "//graf:configs",
        "//prom:configs",
    ],
    importpath = "github.com/jaqx0r/blts/cmd/demo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_docker_docker//client",
        "@com_github_google_go_containerregistry//pkg/name",
        "@com_github_google_go_containerregistry//pkg/v1/layout",
        "@com_github_google_go_containerregistry//pkg/v1/tarball",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//network",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@com_github_tsenart_vegeta//lib",
        "@rules_go//go/runfiles",
    ],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
