load("@aspect_bazel_lib//lib:tar.bzl", "mtree_mutate", "mtree_spec", "tar")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")

go_library(
    name = "lb_lib",
    srcs = ["lb.go"],
    importpath = "github.com/jaqx0r/blts/cmd/lb",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_openzipkin_zipkin_go//:zipkin-go",
        "@com_github_openzipkin_zipkin_go//reporter/http",
        "@com_github_prometheus_client_golang//prometheus",
        "@io_opencensus_go//plugin/ochttp",
        "@io_opencensus_go//plugin/ochttp/propagation/b3",
        "@io_opencensus_go//stats",
        "@io_opencensus_go//stats/view",
        "@io_opencensus_go//tag",
        "@io_opencensus_go//trace",
        "@io_opencensus_go//zpages",
        "@io_opencensus_go_contrib_exporter_prometheus//:prometheus",
        "@io_opencensus_go_contrib_exporter_zipkin//:zipkin",
    ],
)

go_binary(
    name = "lb",
    embed = [":lb_lib"],
    visibility = ["//visibility:public"],
)

mtree_spec(
    name = "layer_mtree_spec",
    srcs = [":lb"],
)

mtree_mutate(
    name = "layer_mtree",
    mtree = ":layer_mtree_spec",
    strip_prefix = "cmd/lb/lb_",
)

tar(
    name = "layer",
    srcs = [":lb"],
    mtree = ":layer_mtree",
)

platform_transition_filegroup(
    name = "transitioned_layer",
    srcs = [":layer"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/lb"],
    exposed_ports = ["9001/tcp"],
    tars = [":layer"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["lb:latest"],
)
